# ChangeLog for mail-filter/spamassassin
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin/ChangeLog,v 1.151 2007/07/29 09:42:18 ian Exp $

*spamassassin-3.2.2 (29 Jul 2007)

  29 Jul 2007; Christian Hartmann <ian@gentoo.org>
  +files/3.2.2-upstream-5574-fix.patch,
  +files/3.2.2-upstream-5574-testcase.patch, +spamassassin-3.2.2.ebuild:
  Versionbump bug #186668; fixed upstream bug #5574; reenabled tests

  26 Jun 2007; Markus Rothe <corsair@gentoo.org>
  spamassassin-3.2.1-r1.ebuild:
  Stable on ppc64; bug #181941

  25 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  spamassassin-3.2.1-r1.ebuild:
  Stable on sparc wrt security #181941

  24 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  spamassassin-3.2.1-r1.ebuild:
  ppc stable, bug #181941

  24 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  spamassassin-3.2.1-r1.ebuild:
  alpha/ia64/x86 stable wrt security #181941

  23 Jun 2007; Jeroen Roovers <jer@gentoo.org> spamassassin-3.2.1-r1.ebuild:
  Stable for HPPA (bug #181941).

  23 Jun 2007; Christoph Mende <angelos@gentoo.org>
  spamassassin-3.2.1-r1.ebuild:
  Stable on amd64 wrt security bug 181941

  21 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  spamassassin-3.2.1-r1.ebuild:
  Add ~alpha wrt #177144

  18 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  spamassassin-3.2.1-r1.ebuild:
  Fixed deps (again), disabled tests, see
  http://www.gossamer-threads.com/lists/spamassassin/users/102895

*spamassassin-3.2.1-r1 (18 Jun 2007)

  18 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +spamassassin-3.2.1-r1.ebuild:
  Dep fixes; tests are still failing on some platforms, opened upstream bug
  5524 on the SA bugzilla

*spamassassin-3.2.1 (18 Jun 2007)

  18 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +spamassassin-3.2.1.ebuild:
  Version bump

  08 May 2007; Raúl Porcel <armin76@gentoo.org>
  spamassassin-3.2.0-r1.ebuild:
  Add ~ia64 wrt bug 177144
