@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin/spamassassin-3.2.1-r1.ebuild,v 1.9 2007/06/26 05:48:39 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin/spamassassin-3.2.1-r1.ebuild,v 1.10 2007/07/29 11:04:18 phreak Exp $
 
 inherit perl-module eutils
 
@@ -8,7 +8,7 @@ MY_P=Mail-SpamAssassin-${PV//_/-}
 S=${WORKDIR}/${MY_P}
 DESCRIPTION="SpamAssassin is an extensible email filter which is used to identify spam."
 HOMEPAGE="http://spamassassin.apache.org/"
-SRC_URI="mirror://apache/spamassassin/source/${MY_P}.tar.bz2"
+SRC_URI="http://archive.apache.org/dist/spamassassin/source/${MY_P}.tar.bz2"
 
 #SRC_TEST="do"
 LICENSE="Apache-2.0"
